--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "red-contrib-static",
+  "name": "node-red-contrib-static",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
