--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-static",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -15,5 +15,13 @@
   },
   "dependencies": {
     "serve-static": "^1.14.1"
-  }
+  },
+  "keywords": [
+    "node-red",
+    "static",
+    "express-static",
+    "webserver",
+    "node",
+    "nodejs"
+  ]
 }
